@@ -84,6 +84,8 @@ graphics/labisso.tga \
 graphics/minosons.tga \
 graphics/greenWatercolorHeader.tga \
 graphics/redWatercolorHeader.tga \
+graphics/guessMarkerRow.tga \
+graphics/guessMarkerColumn.tga \
 
 
 
